fix: border missing color

--- a/static/styles/twodsix.css
+++ b/static/styles/twodsix.css
@@ -2139,7 +2139,7 @@ span.total-output {
 }
 
 .info-container .editor {
-  border: 1px solid;
+  border: 1px solid var(--s2d6-default-color);
   border-radius: 2px;
 }
 
